# cv

./: CMakeLists.txt  README.md  cv.json
.github/workflows/: deploy.yaml
cmake/: UseLATEX.cmake
data/: cv.toml
src/: cv.tex  cv.yaml  cv.yml  template.tex
